--- a/app/src/main/res/layout/relock_dialog_layout.xml
+++ b/app/src/main/res/layout/relock_dialog_layout.xml
@@ -16,106 +16,125 @@
         android:textStyle="bold" />
 
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <RadioGroup
+
+        <RadioButton
+            android:padding="10dp"
             android:layout_marginTop="10dp"
+            android:id="@+id/rb_immedia"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2">
+            android:checked="true"
+            android:text="Immediately"
+            android:theme="@style/MyRadioButton" />
+
+        <RadioButton
+            android:padding="10dp"
+            android:layout_marginTop="10dp"
+            android:id="@+id/rbScreenOff"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="After screen off"
+            android:theme="@style/MyRadioButton" />
+
+        <LinearLayout
+            android:paddingRight="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+              android:gravity="center"
+            android:orientation="horizontal">
 
             <RadioButton
-                android:id="@+id/radio_a"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="Immediately"
-                android:theme="@style/MyRadioButton" />
-
-            <RadioButton
-                android:layout_marginTop="10dp"
-                android:id="@+id/radio_b"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="After screen off"
-                android:theme="@style/MyRadioButton" />
-
-            <LinearLayout
-                android:layout_marginTop="10dp"
-                android:layout_width="match_parent"
+                android:id="@+id/rbAfterMinute"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="After"
+                android:theme="@style/MyRadioButton" />
+
+            <SeekBar
+                android:id="@+id/seekBarMinute"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="10"
+                android:max="60"
+                android:min="1"
+                android:progress="1"
+                android:theme="@style/MySeekBar" />
+
+        <LinearLayout
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <TextView
+
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:textStyle="bold"
+                android:id="@+id/idMinute"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:text="1" />
 
-                <RadioButton
-                    android:id="@+id/radio_c"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="After"
-                    android:theme="@style/MyRadioButton" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="minute" />
 
-                <SeekBar
-                    android:id="@+id/seekBar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:max="60"
-                    android:min="1"
-                    android:progress="1"
-                    android:theme="@style/MySeekBar" />
+        </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="60 minute" />
+        </LinearLayout>
 
-            </LinearLayout>
+        <RelativeLayout
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_width="360dp"
+            android:layout_height="wrap_content">
 
-            <RelativeLayout
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="20dp"
-                android:layout_width="360dp"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_alignParentStart="true"
-                    android:id="@+id/tvCancel"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bg_color_cancel_button"
-                    android:gravity="center"
-                    android:paddingLeft="40sp"
-                    android:paddingRight="40dp"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:text="Cancel"
-                    android:textColor="@color/black"
-                    android:textSize="17sp" />
+            <TextView
+                android:layout_alignParentStart="true"
+                android:id="@+id/tvCancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_color_cancel_button"
+                android:gravity="center"
+                android:paddingLeft="40sp"
+                android:paddingRight="40dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:text="Cancel"
+                android:textColor="@color/black"
+                android:textSize="17sp"/>
 
-                <TextView
-                    android:layout_alignParentEnd="true"
-                    android:id="@+id/tvOk"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+            <TextView
+                android:layout_alignParentEnd="true"
+                android:id="@+id/tvOk"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_color_button"
+                android:gravity="center"
+                android:paddingLeft="45sp"
+                android:paddingRight="45dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:text="OK"
+                android:textColor="@color/white"
+                android:textSize="17sp"/>
 
-                    android:background="@drawable/bg_color_button"
-                    android:gravity="center"
-                    android:paddingLeft="45sp"
-                    android:paddingRight="45dp"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:text="OK"
-                    android:textColor="@color/white"
-                    android:textSize="17sp" />
+        </RelativeLayout>
 
-
-            </RelativeLayout>
-
-        </RadioGroup>
     </LinearLayout>
 
 </LinearLayout>
