--- a/app/src/main/res/layout/dialog_relock_layout.xml
+++ b/app/src/main/res/layout/dialog_relock_layout.xml
@@ -20,7 +20,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
         <RadioButton
             android:padding="10dp"
             android:layout_marginTop="10dp"
@@ -53,16 +52,16 @@
                 android:gravity="center_vertical"
                 android:layout_weight="1"
                 android:id="@+id/rbAfterMinute"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="25dp"
                 android:text="After"
                 android:theme="@style/MyRadioButton" />
 
             <SeekBar
                 android:id="@+id/seekBarMinute"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="10"
+                android:layout_weight="2"
                 android:max="60"
                 android:min="1"
                 android:progress="1"
@@ -75,7 +74,6 @@
             android:layout_height="wrap_content">
 
             <TextView
-
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
@@ -83,14 +81,12 @@
                 android:id="@+id/idMinute"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="center"
                 android:text="1" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="center"
                 android:text="minute" />
 
